--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "vant": "^4.8.0",
     "vue": "^3.3.4",
