--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "less": "^4.2.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.32",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
